[project]
name = "london-data-store"
version = "0.1.0"
description = "API to interact with london data store website"
authors = [
    {name = "Dev Anand Anbarasu",email = "anand26dev@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pip-tools (>=7.5.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
