[project]
name = "london-data-store"
version = "0.1.0"
description = "API to interact with london data store website"
authors = [
    {name = "Dev Anand Anbarasu",email = "anand26dev@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nltk (>=3.9.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
]

[project.optional-dependencies]
geo = [
    "geopandas (>=1.1.1,<2.0.0)",
]
dev = [
    "pip-tools (>=7.5.0,<8.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "ruff (>=0.8.0)",
    "pre-commit (>=4.0.0)",
]

[project.scripts]
london-data-store = "london_data_store.cli:main"

[project.urls]
Repository = "https://github.com/anand26dev/london-data-store"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
